# local-whisper

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GUIDE.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docker.yml  release.yml  security.yml  stale.yml
app/: config.py  main.py  routes.py
app/services/: job_service.py  url_service.py  whisper_service.py
app/utils/: files.py  logger.py
static/: app.js  index.html  style.css
tests/: conftest.py  test_functional.py  test_routes.py
